# 1.00.14 (66543) Aug 3, 2012
Added internationalization
Build a Fraction: Shapes: Fixed: Reset all does not clear level 1 contents
Build a Fraction: Shapes: Fixed: Reset all does not reset the divisions on each container
# 1.00.13 (66537) Aug 3, 2012
Build a Fraction: Animate cards back to stacks faster so it is less likely to click on it while it is moving (which causes problems)
Build a Fraction: Numbers: Fixed: When pressing reset, the fraction container doesn't move to the play area
Build a Fraction: Fixed: The smiling face is too big and covers up other buttons
Build a Fraction: Made it so you can divide the pie into 8 slices instead of just 6
Fraction Matcher: Fixed: Refresh button turns the sound on for the level you refreshed
Fraction Matcher: When pressing "New game" in the game over dialog, refresh the level so the next time the user comes back they can play it again instead of seeing the "game over" dialog, see #3402
Intro: Fixed a bug in dragging and dropping water glasses, see #3401
# 1.00.12 (66526) Aug 2, 2012
Build a Fraction: Shapes: Show more complicated patterns for levels 6-10 on the level selection screen icons
Build a Fraction: Shapes: Fixed: When card stacks have different sizes, the parent toolbox containers don't line up
Build a Fraction: Show divisions when going into the collection box
Build a Fraction: Removed unused code for making target containers flash when matched
Build a Fraction: Shapes: Use green images for left/right buttons that change number of divisions in container
Fraction Matcher: Fade in and out on refresh
Fraction Matcher: Save progress when pushing the "back" button
# 1.00.11 (66407) Jul 28, 2012
Build a Fraction: Shapes: Make dotted lines disappear when going into toolbox
Build a Fraction: Shapes: Make +/- buttons disappear when going into toolbox.
Build a Fraction: Shapes: Fixed: fifths pie pieces don't fit square in toolbox container